
* tmda-ofmipd now has native STARTTLS and SSL support courtesy of
  Stephen Warren. The new options are '--tls', '--ssl', '--ssl-key',
  and '--ssl-crt'. Note that the tlslite Python module
  (http://trevp.net/tlslite/) needs to be installed to use this
  feature. For more information, see tmda-ofmipd's '--help' output or
  the "SSL/TLS" section of http://wiki.tmda.net/TmdaOfmipdHowto

======================================================================

TMDA 1.1.11 "Ladyburn" --

* The snapshot of the wiki documentation is now included within the
  main tmda-1.1.x.tgz tarball in the 'doc' directory rather than in a
  separate tmda-1.1.x-doc.tgz tarball.

* New feature courtesy of Vitor Espindola. A new configuration
  variable, TIMEOUT_UNITS, to give users the ability to customize the
  timeout unit value strings in the templates instead of using the
  English defaults of "years", "months", "weeks", "days", "hours",
  "minutes", and "seconds". For more information, see
  http://wiki.tmda.net/ConfigurationVariables#TIMEOUT_UNITS

* Virtual domain improvements to tmda-pending courtesy of Lloyd
  Zusman. A '--vhost-script' command-line option has been added to
  match tmda-ofmipd and tmda-filter. Also two new options have been
  added, '--vhost-user' and '--vhost-domain'. See the tmda-pending
  --help output for more information, or for greater detail, see
  http://article.gmane.org/gmane.mail.spam.tmda.devel/6584

* An alternative "simpler" example of how to use TLS with tmda-ofmipd
  via stunnel has been added. See the contrib/ofmipd-stunnel-daemons/
  directory.

* A bug that broke tmda-filter's '-e' command-line option has been
  fixed.

* A 'reload' option has been added to contrib/tofmipd.init, just for
  correctness; it currently does the same thing as 'restart'.

======================================================================

TMDA 1.1.10 "Killyloch" --

* New feature. When a message is released from your pending queue via